# LIDE

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TODO.md
docs/: Руководство LIDE.docx
enc_temp_folder/38149e6f95428f9956ef98ab2cb7eec/: TODO.md
examples/: basic.lisp  functions.lisp  test.lisp
install/: windows_install.cmake  windows_install.iss
src/: resources.aps  resources.qrc
src/app/: main.cpp  settings.cpp  settings.h  version.h  version.h.in
src/styles/: dark.css  light.css  style.css  template.css  template.css.in
src/styles/colors/: dark.colors  dark_colors.css  light.colors  light_colors.css
src/styles/translations/: LIDE_en_US.ts
src/translations/: LIDE_en_US.ts
src/ui/: about_dialog.cpp  about_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/components/: console_parser.cpp  console_parser.h  error_notification.cpp  error_notification.h  lisp_highlighter.cpp  lisp_highlighter.h  project_tree_delegate.cpp  project_tree_delegate.h
src/ui/components/console/: console_process.cpp  console_process.h
src/ui/dialogs/: about_dialog.cpp  about_dialog.h  about_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui
src/ui/widgets/: TODO.md  console.cpp  console.h  console_widget.cpp  console_widget.h  editor_tab_widget.cpp  editor_tab_widget.h  lisp_edit.cpp  lisp_editor.cpp  lisp_editor.h  project_tree.cpp  project_tree.h  repl_widget.cpp  repl_widget.h
src/ui/widgets/console/: console.cpp  console.h  console_events.cpp  console_helpers.cpp  console_io.cpp  console_process.cpp
src/util/repl_console/: repl_controller.cpp  repl_controller.h  repl_history.cpp  repl_history.h  repl_message.h  repl_parser.cpp  repl_parser.h  repl_process.cpp  repl_process.h
